--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "gulp-connect": "^2.2.0",
     "gulp-jade": "^1.0.0",
     "gulp-stylus": "^2.0.1"
+  },
+  "dependencies": {
+    "font-awesome-stylus": "^1.2.0",
+    "grunt": "^0.4.5",
+    "kouto-swiss": "^0.11.8"
   }
 }
