--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
     "gulp-stylus": "^2.0.1"
   },
