--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,10 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "slick.js": "~1.4.1"
+  },
+  "devDependencies": {
+    "slick.js": "~1.4.1"
   }
 }
